# prometheus

./: .gitignore  ARCHITECTURE_DECISION_LOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PRINCIPLES.md  InstallationLog.txt  KNOWN_LIMITATIONS.md  README.md  SCAFFOLD_FOLDERS.md  SECURITY.md  SOURCERY_REVIEW.md  VISION_2035.md  cudart64_13.def  cudart64_13.exp  cudart64_13.lib  happy_path.py  main.py  prome.bat  prome.py  prome.sh  prometheus.py  pyproject.toml  pytest-report.xml  requirements.txt  sidecar_err.txt  sidecar_out.txt
RFCs/: 0002-phase-gamma-engineering-core.md  0004-phase-epsilon-autonomous-engineering.md  0005-delta-epsilon-omega-roadmap.md
aether/: models.py  runtime.py
agents/: __init__.py  base.py  consensus.py  coordinator.py  delegation.py  echo_agent.py  manager.py  planner.py
ai/: embeddings.py  memory_consolidation.py  speech.py  vision.py
api/: __init__.py  agent_api.py  capability_api.py  device_api.py  event_api.py  events.py  memory_api.py  plugin_api.py  reasoning_api.py
architecture/: device-model.md  memory.md  plugin-system.md  roadmap.md  security.md  system.md
assistant/: __init__.py
automation/: __init__.py
autonomous/: engineering_agent.py  proposals.py  reporter.py  simulator.py  tester.py
backend/: dashboard.py  main.py  phase_endpoints.py
benchmarks/: README.md  perf_models.py  regression.py
cloud/: auth.db  gateway.db  go.mod  go.sum  tunnel.db  workspace_sync.py
config/: baseline.json  owned_devices.json  workflows.json
contracts/: __init__.py  agent.py  capability.py  device.py  event_bus.py  memory.py  plugin.py  reasoning.py  scheduler.py  versioning.py
core/: bootstrap.py  capabilities.py  commands.py  config.py  container.py  database.py  enterprise_workflow.py  enterprise_workflow_runner.py  event_bus.py  logger.py  native_runtime.py  observability.py  ownership_registry.py  provider_config.py  scheduler.py
cpp/: CMakeLists.txt
cpp/hal/: CMakeLists.txt
cpp/hal/audio_jack/: audio_jack.c  audio_jack.h
cpp/hal/bacnet/: bacnet.c  bacnet.h
cpp/hal/csi/: csi.c  csi.h
cpp/hal/dfu/: dfu.c  dfu.h
cpp/hal/displayport/: displayport.c  displayport.h
cpp/hal/drone/: drone.c  drone.h
cpp/hal/dsi/: dsi.c  dsi.h
cpp/hal/fpga/: fpga.c  fpga.h
cpp/hal/gpio/: gpio.c  gpio.h
cpp/hal/hdmi/: hdmi.c  hdmi.h
cpp/hal/hid/: hid.c  hid.h
cpp/hal/i2s/: i2s.c  i2s.h
cpp/hal/lin/: lin.c  lin.h
cpp/hal/midi/: midi.c  midi.h
cpp/hal/mipi/: mipi.c  mipi.h
cpp/hal/modbus/: modbus.c  modbus.h
cpp/hal/mqtt/: mqtt.c  mqtt.h
cpp/hal/nfc/: nfc.c  nfc.h
cpp/hal/opcua/: opcua.c  opcua.h
cpp/hal/pcie/: pcie.c  pcie.h
cpp/hal/plc/: plc.c  plc.h
cpp/hal/recovery/: recovery.c  recovery.h
cpp/hal/rfid/: rfid.c  rfid.h
cpp/hal/sata/: sata.c  sata.h
cpp/hal/sd/: sd.c  sd.h
cpp/hal/serial/: serial.c  serial.h
cpp/hal/swd/: swd.c  swd.h
cpp/hal/usb/: usb.c  usb.h
cpp/hal/vehicle/: vehicle.c  vehicle.h
cpp/hardware/drivers/: usb.c  usb.h
cpp/tensor/: kernels.c  kernels.h
crates/aether-runtime/: Cargo.toml  pyproject.toml
crates/aether-runtime/src/: agent_lifecycle.rs  context.rs  error.rs  http_provider.rs  lib.rs  lm_studio.rs  manager.rs  provider.rs  registry.rs  routing.rs  titan_provider.rs  tools.rs  types.rs
crates/aether-runtime/tests/: lm_studio_integration.rs
crates/ai-runtime/: Cargo.toml
crates/ai-runtime/src/: agent.rs  context.rs  health.rs  http_provider.rs  lib.rs  manager.rs  routing.rs  titan_provider.rs  tools.rs  types.rs
crates/ai-runtime/tests/: lm_studio_integration.rs
crates/cloud-core/: Cargo.toml
crates/cloud-core/src/: lib.rs
crates/enterprise/: Cargo.toml
crates/enterprise/src/: tenant.rs
crates/graveyard/distributed/: Cargo.toml
crates/graveyard/distributed/src/: crdt.rs  sync.rs
crates/graveyard/hal-core/: Cargo.toml
crates/graveyard/hal-core/src/: registry.rs
crates/graveyard/hal-core/src/c_bindings/: hal_bindings.c
crates/graveyard/hal-core/src/transports/: adb.rs  bluetooth.rs  can.rs  dfu.rs  hid.rs  i2c.rs  jtag.rs  network.rs  recovery.rs  serial.rs  spi.rs  usb.rs
crates/graveyard/marketplace/: Cargo.toml
crates/graveyard/marketplace/src/: registry.rs  verify.rs
crates/graveyard/policy/: Cargo.toml
crates/graveyard/policy/src/: lib.rs
crates/graveyard/runtime_management/: Cargo.toml
crates/graveyard/runtime_management/src/: health.rs  lib.rs  lifecycle.rs
crates/graveyard/sdk-cli/: Cargo.toml
crates/graveyard/sdk-cli/src/: lib.rs  main.rs  pack.rs
crates/hal-core/: Cargo.toml  build.rs  pyproject.toml
crates/hal-core/src/: driver_manifest.rs  lib.rs
crates/hal-core/src/c_bindings/: hal_bindings.h
crates/hal-core/src/transports/: fastboot.rs  gpio.rs  mod.rs  serial.rs  swd.rs  usb.rs
crates/prometheus-kernel/: Cargo.toml
crates/prometheus-kernel/src/: event_bus.rs  hardware.rs  kernel.rs  lib.rs  session.rs  terminal.rs
crates/sdk-core/: Cargo.toml
crates/sdk-core/src/: driver.rs  plugin.rs  versioning.rs
crates/tensor-engine/: Cargo.toml  build.rs  pyproject.toml
crates/tensor-engine/benches/: tensor_bench.rs
crates/tensor-engine/src/: cuda.rs  lib.rs  parallel.rs  parallel_tests.rs  vector.rs
crates/tensor-engine/src/backends/: mod.rs  simd.rs
crates/tensor-engine/src/backends/wgpu/: mod.rs
crates/tensor-engine/src/backends/wgpu/shaders/: add.wgsl  matmul.wgsl  mul.wgsl
crates/tensor-engine/src/cuda/: tensor_cuda.cu
crates/tensor-engine/src/inference/: mod.rs
crates/tensor-engine/src/memory/: mod.rs
crates/titan-core/: Cargo.toml
crates/titan-core/src/: bindings.rs  encoder.rs  lib.rs  special_tokens.rs  types.rs
crates/titan-engine/: Cargo.toml  build.rs  pyproject.toml
crates/titan-engine/src/: cuda.rs  lib.rs
crates/titan-engine/src/cuda/: tensor_cuda.cu
crates/titan-tokenizer/: Cargo.toml
crates/titan-tokenizer/src/: bindings.rs  decoder.rs  error.rs  lib.rs
dashboard/: __init__.py  agents.py  devices.py  logs.py  (+9 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
(+579 files in other folders)
