[workspace]
resolver = "2"
members = [
    "crates/hal-core",
    "crates/aether-runtime",
    "crates/tensor-engine",
    "crates/titan-core",
    "crates/prometheus-kernel",
    "crates/titan-engine",
    "crates/distributed",
    "crates/marketplace",
    "crates/enterprise",
    "crates/policy",
    "crates/runtime_management",
    "crates/cloud-core",
    "crates/sdk-core",
    "crates/sdk-cli",
]
# src-tauri is excluded: it pulls Tauri/WebView2/NSIS host deps and is
# built separately via `cargo tauri build` (see src-tauri/README.md).
exclude = ["src-tauri"]
