[workspace]
resolver = "2"
members = [
    "crates/aether-runtime",
    "crates/tensor-engine",
    "crates/titan-core",
    "crates/titan-engine",
]
# src-tauri is excluded: it pulls Tauri/WebView2/NSIS host deps and is
# built separately via `cargo tauri build` (see src-tauri/README.md).
exclude = ["src-tauri", "crates/graveyard"]
