[package]
name = "prometheus-src"
version = "0.6.0"
description = "Prometheus Engineering Intelligence OS — native window"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
strip = true
opt-level = "s"
codegen-units = 1
lto = true
