cmake_minimum_required(VERSION 3.16)
project(prometheus_hal C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

option(BUILD_HAL_USB "Build USB HAL transport" ON)
option(BUILD_HAL_SERIAL "Build Serial HAL transport" ON)
option(BUILD_HAL_GPIO "Build GPIO HAL transport" ON)
option(BUILD_HAL_SPI "Build SPI HAL transport" ON)
option(BUILD_HAL_I2C "Build I2C HAL transport" ON)
option(BUILD_HAL_CAN "Build CAN HAL transport" ON)
option(BUILD_HAL_JTAG "Build JTAG HAL transport" ON)
option(BUILD_HAL_HID "Build HID HAL transport" ON)
option(BUILD_HAL_DFU "Build DFU HAL transport" ON)
option(BUILD_HAL_SWD "Build SWD HAL transport" ON)
option(BUILD_HAL_RECOVERY "Build Recovery HAL transport" ON)
option(BUILD_HAL_I2S "Build I2S HAL transport" ON)
option(BUILD_HAL_AUDIO_JACK "Build Audio Jack HAL transport" ON)
option(BUILD_HAL_MIDI "Build MIDI HAL transport" ON)
option(BUILD_HAL_MIPI "Build MIPI HAL transport" ON)
option(BUILD_HAL_CSI "Build CSI HAL transport" ON)
option(BUILD_HAL_DSI "Build DSI HAL transport" ON)
option(BUILD_HAL_HDMI "Build HDMI HAL transport" ON)
option(BUILD_HAL_DISPLAYPORT "Build DisplayPort HAL transport" ON)
option(BUILD_HAL_NFC "Build NFC HAL transport" ON)
option(BUILD_HAL_RFID "Build RFID HAL transport" ON)
option(BUILD_HAL_LIN "Build LIN HAL transport" ON)
option(BUILD_HAL_PCIE "Build PCIe HAL transport" ON)
option(BUILD_HAL_SATA "Build SATA HAL transport" ON)
option(BUILD_HAL_SD "Build SD HAL transport" ON)
option(BUILD_HAL_MQTT "Build MQTT HAL transport" ON)
option(BUILD_HAL_MODBUS "Build Modbus HAL transport" ON)
option(BUILD_HAL_OPCUA "Build OPC UA HAL transport" ON)
option(BUILD_HAL_BACNET "Build BACnet HAL transport" ON)
option(BUILD_HAL_DRONE "Build Drone HAL transport" ON)
option(BUILD_HAL_VEHICLE "Build Vehicle HAL transport" ON)
option(BUILD_HAL_FPGA "Build FPGA HAL transport" ON)
option(BUILD_HAL_PLC "Build PLC HAL transport" ON)

if(WIN32)
    find_library(WINUSB_LIBRARY winusb)
    find_library(SETUPAPI_LIBRARY setupapi)
endif()

if(UNIX AND NOT APPLE)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
    pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
endif()

add_library(prom_hal_core INTERFACE)
target_include_directories(prom_hal_core INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

macro(prom_add_hal_transport name)
    string(TOLOWER "${name}" _lower)
    if(BUILD_HAL_${name})
        add_library(prom_hal_${_lower} SHARED ${_lower}/${_lower}.c)
        target_include_directories(prom_hal_${_lower} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${_lower})
    endif()
endmacro()

if(BUILD_HAL_USB)
    add_library(prom_hal_usb SHARED usb/usb.c)
    target_include_directories(prom_hal_usb PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/usb)
    if(WIN32)
        target_link_libraries(prom_hal_usb PRIVATE setupapi)
    elseif(UNIX AND NOT APPLE)
        target_include_directories(prom_hal_usb PRIVATE ${LIBUSB_INCLUDE_DIRS})
        target_link_libraries(prom_hal_usb PRIVATE ${LIBUSB_LIBRARIES})
        target_compile_definitions(prom_hal_usb PRIVATE HAVE_LIBUSB)
    endif()
endif()

if(BUILD_HAL_SERIAL)
    add_library(prom_hal_serial SHARED serial/serial.c)
    target_include_directories(prom_hal_serial PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/serial)
    if(UNIX AND NOT APPLE AND LIBSERIALPORT_FOUND)
        target_include_directories(prom_hal_serial PRIVATE ${LIBSERIALPORT_INCLUDE_DIRS})
        target_link_libraries(prom_hal_serial PRIVATE ${LIBSERIALPORT_LIBRARIES})
        target_compile_definitions(prom_hal_serial PRIVATE HAVE_LIBSERIALPORT)
    endif()
endif()

if(BUILD_HAL_GPIO)
    add_library(prom_hal_gpio SHARED gpio/gpio.c)
    target_include_directories(prom_hal_gpio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/gpio)
endif()

prom_add_hal_transport(HID)
prom_add_hal_transport(DFU)
prom_add_hal_transport(SWD)
prom_add_hal_transport(RECOVERY)
prom_add_hal_transport(I2S)
prom_add_hal_transport(AUDIO_JACK)
prom_add_hal_transport(MIDI)
prom_add_hal_transport(MIPI)
prom_add_hal_transport(CSI)
prom_add_hal_transport(DSI)
prom_add_hal_transport(HDMI)
prom_add_hal_transport(DISPLAYPORT)
prom_add_hal_transport(NFC)
prom_add_hal_transport(RFID)
prom_add_hal_transport(LIN)
prom_add_hal_transport(PCIE)
prom_add_hal_transport(SATA)
prom_add_hal_transport(SD)
prom_add_hal_transport(MQTT)
prom_add_hal_transport(MODBUS)
prom_add_hal_transport(OPCUA)
prom_add_hal_transport(BACNET)
prom_add_hal_transport(DRONE)
prom_add_hal_transport(VEHICLE)
prom_add_hal_transport(FPGA)
prom_add_hal_transport(PLC)

install(TARGETS prom_hal_core
    EXPORT prometheus_hal_targets
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
)

set(_HAL_TRANSPORTS USB SERIAL GPIO HID DFU SWD RECOVERY I2S AUDIO_JACK MIDI MIPI CSI DSI HDMI DISPLAYPORT NFC RFID LIN PCIE SATA SD MQTT MODBUS OPCUA BACNET DRONE VEHICLE FPGA PLC)
foreach(_t ${_HAL_TRANSPORTS})
    string(TOLOWER "${_t}" _t_lower)
    if(BUILD_HAL_${_t})
        install(TARGETS prom_hal_${_t_lower}
            EXPORT prometheus_hal_targets
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib
        )
        install(FILES ${_t_lower}/${_t_lower}.h DESTINATION include/prometheus/hal)
    endif()
endforeach()
