[package]
name = "aether-runtime"
version = "0.1.0"
description = "P3 Aether AI Runtime — providers, routing, tool dispatch, context, agents (Rust)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"

[dependencies.pyo3]
version = "0.21"
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
httpmock = "0.7"
