[package]
name = "cloud-core"
version = "0.1.0"
description = "P2 Cloud Platform — core cloud types: multi-tenant, auth, tunnels, billing"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

thiserror = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"

[lib]
name = "cloud_core"
