[package]
name = "enterprise"
version = "0.1.0"
description = "P2 Cloud Platform — enterprise features (multi-tenant, RBAC, billing)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "enterprise"
