[package]
name = "hal-core"
version = "0.1.0"
description = "P2 Hardware Platform — unified HAL trait, transports, signed flashing (Rust)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.pyo3]
version = "0.21"
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
