[package]
name = "hal-core"
version = "0.2.0"
description = "P2 Hardware Platform — unified HAL trait, transports, signed flashing (Rust + C/C++/Zig)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.cc]
version = "1.0"
optional = true

[dependencies.libloading]
version = "0.8"
optional = true

[dependencies.pyo3]
version = "0.21"
optional = true

[dependencies.rusb]
version = "0.9"
optional = true

[dependencies.serialport]
version = "4"
optional = true

[features]
default = []
python = ["pyo3", "c-hal"]
c-hal = ["cc"]
dynamic-hal = ["libloading"]
# Real USB enumeration + hot-plug via libusb (rusb). Off by default so the
# crate still builds/tests on CI hosts without libusb present.
usb-real = ["rusb"]
# Real serial port enumeration + hot-plug via libserialport. Off by default.
serial-real = ["serialport"]
# Real ADB device discovery via the `adb` CLI. Off by default.
adb-real = []
# Real fastboot device discovery via the `fastboot` CLI. Off by default.
fastboot-real = []
full = ["c-hal", "python", "usb-real", "serial-real", "adb-real", "fastboot-real"]

[build-dependencies]
cc = "1.0"
bindgen = "0.70"

[lib]
name = "hal_core"
