[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hal-core"
version = "0.1.0"
description = "P2 Hardware Platform — unified HAL trait, transports, signed flashing"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.maturin]
module-name = "hal_core"
