[package]
name = "prometheus-kernel"
version = "0.1.0"
description = "P1 Kernel — PTY, sessions, events (Rust)"
edition = "2021"
rust-version = "1.77"

[dependencies]
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
hal-core = { path = "../hal-core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }

[features]
# Spawns a real PTY (ConPTY on Windows) for integration tests. Off by default
# so `cargo test` runs without launching shells in constrained environments.
pty-test = []
