[package]
name = "sdk-core"
version = "0.1.0"
description = "Phase 9 SDK — core types and traits for Prometheus plugins, drivers, and engineering extensions"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"

[lib]
name = "sdk_core"
