[package]
name = "tensor-engine"
version = "0.1.0"
description = "P6 High Performance Engine — tensor/memory/vector engines (Rust)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]

[dependencies.pyo3]
version = "0.21"
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
