[package]
name = "tensor-engine"
version = "0.1.0"
description = "P6 High Performance Engine — tensor/memory/vector engines (Rust)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[build-dependencies]
cc = "1"

[dependencies]
anyhow = { version = "1.0" }
bytemuck = { version = "1.16", optional = true }
futures-intrusive = { version = "0.5", optional = true }
half = { version = "2.4", optional = true }
memmap2 = { version = "0.9", optional = true }
pollster = { version = "0.3", optional = true }
rand = { version = "0.8" }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
serde_json = { version = "1.0", optional = true }
wgpu = { version = "22.1", optional = true }

[dependencies.pyo3]
version = "0.21"
optional = true

[features]
default = ["cpu"]
cpu = []
cuda = []
memmap = ["dep:memmap2"]
python = ["pyo3"]
qdrant = ["dep:reqwest", "dep:serde_json"]
simd = []
tensor-parallel = []
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:futures-intrusive", "dep:half", "dep:pollster"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tensor_bench"
harness = false
