[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tensor-engine"
version = "0.1.0"
description = "P6 High Performance Engine — tensor/memory/vector engines"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.maturin]
module-name = "tensor_engine"
