[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "titan-engine"
version = "0.1.0"
description = "P5 Titan AI Platform — CUDA kernel dispatch and training primitives"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.maturin]
module-name = "titan_engine"
