[package]
name = "policy"
version = "0.1.0"
description = "P2 Cloud Platform — policy engine with evaluation, rules and audit logging"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"

[lib]
name = "policy"
