[package]
name = "sdk-cli"
version = "0.1.0"
description = "Phase 9 SDK developer tooling — the `prometheus` CLI in Rust (scaffold, pack, verify)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
walkdir = "2"
zip = "2"

[lib]
name = "sdk_cli"
